# calaos-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: calaos_json_protocol.rs  calaos_protocol.rs  event.rs  io_context.rs  io_value.rs  lib.rs  main_server.rs  mqtt_client.rs  rules_config.rs  rules_engine.rs  websocket_client.rs  websocket_server.rs
core/src/config/: io.rs  mod.rs  mqtt.rs  rules.rs
core/src/io/: modbus_client.rs  time_controller.rs  wago_modbus_controller.rs
server/: Cargo.toml
server/src/: cert.p12  main.rs
src/: calaos_json_protocol.rs  calaos_protocol.rs  cert.p12  io_config.rs  io_context.rs  io_value.rs  lib.rs  main.rs  main_server.rs  rules_config.rs  rules_engine.rs  task.rs  wago_controller.rs  wago_modbus_controller.rs  websocket_server.rs
src/io/: mod.rs  modbus_client.rs  wago_controller.rs  wago_modbus_controller.rs
