[package]
name = "calaos-rs"
version = "0.1.0"
authors = ["Camille Bordignon <camille.bordignon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_derive = "1.0.117"
serde-xml-rs = "0.4.0"
serde-aux = "1.1.0"
tokio = { version = "0.3.2", features = ["full"] }
nom = "5.1.2"
