[package]
name = "calaos-core"
version = "0.1.0"
authors = ["Camille Bordignon <camille.bordignon@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
nom = "7.0"
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.6"
serde-aux = "4.5"
serde_json = "1.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
  "async-await",
] }
tokio = { version = "1.0", default-features = false, features = [
  "macros",
  "net",
  "time",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
] }
tokio-modbus = { version = "0.13", default-features = false, features = [
  "tcp",
] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-futures = { version = "0.2", default-features = false }
rumqttc = "0.24.0"

[features]
# Network-bound integration tests (disabled by default)
net-tests = []
