[package]
name = "calaos-server-rs"
version = "0.1.0"
authors = ["Camille Bordignon <camille.bordignon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calaos-core = {path = "../core"}
clap = {version = "4", features = ["cargo", "derive"]}
tokio = { version = "1.0", default-features = false, features = ["macros", "net", "time", "rt", "rt-multi-thread", "signal", "sync", "tracing"] }
tokio-rustls = "0.25"
tracing = "0.1"
tracing-subscriber = "0.2.2"
rustls-pemfile = "2"
