[package]
name = "calaos-server-rs"
version = "0.2.0"
authors = ["Camille Bordignon <camille.bordignon@gmail.com>"]
edition = "2021"

[dependencies]
calaos-core = { path = "../core" }
clap = { version = "4", features = ["cargo", "derive"] }
tokio = { version = "1.0", default-features = false, features = [
  "macros",
  "net",
  "time",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "tracing",
] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls-pemfile = "2"
